@@ -3,8 +3,8 @@ package xfacthd.framedblocks.client.model;
 import net.minecraft.client.renderer.RenderType;
 import net.minecraft.client.renderer.block.model.BakedQuad;
 import net.minecraft.client.resources.model.BakedModel;
+import net.minecraft.client.resources.model.ModelResourceLocation;
 import net.minecraft.core.Direction;
-import net.minecraft.resources.ResourceLocation;
 import net.minecraft.util.RandomSource;
 import net.neoforged.neoforge.client.model.data.ModelData;
 import xfacthd.framedblocks.api.util.Utils;
@@ -14,7 +14,9 @@ import java.util.function.Predicate;
 
 public final class ReinforcementModel
 {
-    public static final ResourceLocation LOCATION = Utils.rl("block/framed_reinforcement");
+    public static final ModelResourceLocation LOCATION = ModelResourceLocation.standalone(
+            Utils.rl("block/framed_reinforcement")
+    );
     private static final RandomSource RAND = RandomSource.create();
     private static final BakedQuad[] QUADS_PER_FACE = new BakedQuad[6];
 
@@ -34,7 +36,7 @@ public final class ReinforcementModel
         }
     }
 
-    public static void reload(Map<ResourceLocation, BakedModel> models)
+    public static void reload(Map<ModelResourceLocation, BakedModel> models)
     {
         BakedModel model = Objects.requireNonNull(models.get(LOCATION));
         Utils.forAllDirections(false, dir ->
@@ -46,7 +48,7 @@ public final class ReinforcementModel
                 throw new IllegalStateException("Expected at least one quad on side %s, got none".formatted(dir));
             }
 
-            BakedQuad quad = quads.get(0);
+            BakedQuad quad = quads.getFirst();
             QUADS_PER_FACE[dir.get3DDataValue()] = quad;
         });
     }
